# puppet-pacemaker

./: .fixtures.yml  .gitignore  .gitreview  .zuul.yaml  Gemfile  Modulefile  README.md  Rakefile  bindep.txt  metadata.json  setup.cfg  tox.ini
agent_generator/: agent_generator.rb  variables.sh
agent_generator/src_xml/: fence_amt.xml  fence_compute.xml  fence_crosslink.xml  fence_ipmilan.xml  fence_ironic.xml  fence_redfish.xml  fence_rhevm.xml  fence_watchdog.xml
examples/pacemaker/: host.pp  setup.pp
examples/service/: start.pp  stop.pp
files/: cman
lib/facter/: pacemaker_node_name.rb  pcmk_is_remote.rb
lib/pacemaker/: options.yaml  type.rb  wait.rb
manifests/: contain.pp  corosync.pp  init.pp  install.pp  new.pp  params.pp  property.pp  remote.pp  resource_defaults.pp  resource_op_defaults.pp  service.pp  stonith.pp
manifests/constraint/: base.pp  colocation.pp  location.pp  order.pp
manifests/crm/: ip.pp
manifests/new/: firewall.pp  install.pp  params.pp  service.pp  setup.pp  wrapper.pp
manifests/resource/: base.pp  bundle.pp  filesystem.pp  group.pp  ip.pp  lsb.pp  mysql.pp  ocf.pp  qpid.pp  remote.pp  route.pp  service.pp  systemd.pp
manifests/resources/: ip.pp  lsb.pp
manifests/stonith/: fence_amt.pp  fence_apc.pp  fence_apc_snmp.pp  fence_bladecenter.pp  fence_brocade.pp  fence_cisco_mds.pp  fence_cisco_ucs.pp  fence_compute.pp  fence_crosslink.pp  fence_drac5.pp  fence_eaton_snmp.pp  fence_eps.pp  fence_hpblade.pp  fence_ibmblade.pp  fence_idrac.pp  fence_ifmib.pp  level.pp  (+22 more)
spec/: spec_helper_acceptance.rb
tests/: basic.pp  init.pp
(+74 files in other folders)
