[metadata]
name = puppet-pacemaker
summary = Puppet module for Pacemaker
description_file =
    README.md
long_description_content_type = text/markdown
author = Mirantis, Red-Hat and OpenStack Contributors
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/puppet-openstack-guide/latest
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
